--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,5 +45,13 @@
         <span class="link-title">Delegación DNS</span>
         <span class="link-arrow">→</span>
     </a>
+    
+    <a href="https://test-medidordevelocidad.netlify.app" class="link-card" target="_blank">
+        <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+        </svg>
+        <span class="link-title">Medidor de Velocidad</span>
+        <span class="link-arrow">→</span>
+    </a>
 </div>
 {{ end }}
