--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,4 @@
+<!-- layouts/index.html (modificado) -->
 {{ define "main" }}
 <div class="profile">
     <img src="{{ .Site.Params.mainImage }}" alt="Profile" class="profile-image">
@@ -8,7 +9,7 @@
 <div class="links-container">
     <!-- Contenedor para iconos animados que atraviesan la pantalla -->
     <div class="icons-animation-container">
-        <!-- Iconos animados (copias de los iconos de los links) -->
+        <!-- Iconos animados (selección de los iconos de los links) -->
         <svg class="animated-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="#2563eb">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
         </svg>
